[project]
name = "lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "http-client>=0.1.22",
    "httpx>=0.28.1",
    "openai-agents>=0.17.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
